--- a/simonovlabahomework.ipynb
+++ b/simonovlabahomework.ipynb
@@ -19,7 +19,8 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "import lightgbm as lgb\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.metrics import recall_score"
+    "from sklearn.metrics import recall_score\n",
+    "# Я буду использовать кэтбуст поэтому импортирую кэтбуст"
    ]
   },
   {
@@ -28,8 +29,7 @@
    "outputs": [],
    "source": [
     "data = pd.read_csv('train_dataset_train.csv', sep=',')\n",
-    "# data=data.head(150000)\n",
-    "# features=data.drop(labels=[\"time_to_under\",\"labels\"])\n"
+    "#тут я полностью читаю файл excel с данными"
    ],
    "metadata": {
     "collapsed": false
@@ -40,6 +40,7 @@
    "execution_count": 96,
    "outputs": [],
    "source": [
+    "#предобработку делаю (удаляю ненужные столбцы из нашего датасета)\n",
     "data = data.drop(['id', 'ticket_id', 'entrance_id', 'station_id', 'line_id', 'entrance_nm'], axis=1)"
    ],
    "metadata": {
@@ -135,6 +136,9 @@
    "execution_count": 102,
    "outputs": [],
    "source": [
+    "#Здесь разбивка на тренировочные и тестовые датасеты, с учетом test_size для обучения\n",
+    "#для предсказания времени соответсвующий датасет называется for_regressor\n",
+    "#для предсказания станции - for_classifier\n",
     "X = data.drop(columns=['time_to_under', 'label'])\n",
     "y = data['time_to_under']\n",
     "\n",
@@ -217,20 +221,23 @@
     }
    ],
    "source": [
+    "#инициализирую регрессор из библиотеки lgb который нам всё порешает\n",
     "gbm = lgb.LGBMRegressor(objective='regression')\n",
     "\n",
     "params = {\n",
     "    'num_leaves': range(1, 102, 10),\n",
     "    'n_estimators': range(1, 102, 10)\n",
     "}\n",
+    "# подбираем сетку параметров и после этого обучаем модель\n",
     "grid = GridSearchCV(gbm, params, cv=5)\n",
     "grid.fit(X_train_for_regression, y_train_for_regression)\n",
+    "\n",
     "\n",
     "gbm = grid.best_estimator_\n",
     "print(grid.best_params_)\n",
     "\n",
     "gbm.fit(X_train_for_regression, y_train_for_regression)\n",
-    "\n",
+    "#после долгого обучения модели, делаем предсказание\n",
     "y_predict_for_regression = gbm.predict(X_test_for_regression, num_iteration=gbm.best_iteration_)"
    ],
    "metadata": {
@@ -242,6 +249,7 @@
    "execution_count": 109,
    "outputs": [],
    "source": [
+    "##тут я создаю датасеты точно также как и для регрессора делал выше\n",
     "X = data.drop(columns=['time_to_under', 'label'])\n",
     "y = data['label']\n",
     "\n",
@@ -258,6 +266,7 @@
    "execution_count": 113,
    "outputs": [],
    "source": [
+    "#с классифайером все попроще\n",
     "gbm = lgb.LGBMClassifier(objective='multiclass', max_depth=20, n_estimators=10)\n",
     "gbm.fit(X_train_for_classifier, y_train_for_classifier)\n",
     "y_predict_for_classifier = gbm.predict(X_test_for_classifier)\n",
@@ -283,8 +292,10 @@
     }
    ],
    "source": [
+    "#считаю метрику как 0.5*R2+0.5*Recall, чтобы посчитать это, я импортировал (в самом начале) библиотеки которые сами метрику посчитают\n",
     "result = 0.5*r2_score(y_test_for_regression, y_predict_for_regression) + 0.5*recall_score(y_test_for_classifier, y_predict_for_classifier, average='micro')\n",
-    "print(result)"
+    "print(result)\n",
+    "#ну вроде у меня нормальная метрика ?"
    ],
    "metadata": {
     "collapsed": false
